--- a/All_Project_Files/Final_Project_Files/Thresholding_Without_Background.ui
+++ b/All_Project_Files/Final_Project_Files/Thresholding_Without_Background.ui
@@ -13,62 +13,123 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="Open_Image_Button">
+  <widget class="QScrollArea" name="scrollArea_2">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>620</y>
-     <width>401</width>
+     <x>730</x>
+     <y>40</y>
+     <width>571</width>
+     <height>561</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>569</width>
+      <height>559</height>
+     </rect>
+    </property>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>571</width>
+       <height>561</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </widget>
+  </widget>
+  <widget class="QScrollArea" name="scrollArea">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>40</y>
+     <width>571</width>
+     <height>561</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>569</width>
+      <height>559</height>
+     </rect>
+    </property>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>571</width>
+       <height>561</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </widget>
+  </widget>
+  <widget class="QPushButton" name="Save_As">
+   <property name="geometry">
+    <rect>
+     <x>900</x>
+     <y>660</y>
+     <width>403</width>
      <height>81</height>
     </rect>
    </property>
    <property name="text">
-    <string>Open Image</string>
+    <string>Save As</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLineEdit" name="lineEdit_2">
    <property name="geometry">
     <rect>
-     <x>870</x>
-     <y>640</y>
-     <width>281</width>
+     <x>550</x>
+     <y>710</y>
+     <width>301</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 16pt &quot;MS Shell Dlg 2&quot;;</string>
+    <string notr="true">border: 12px  solid rgb(0, 0, 0);
+border-width: 2px;
+font: 11.5pt &quot;MS Shell Dlg 2&quot;;
+border-radius: 15px;
+padding-left:20px;
+padding-right:20px;</string>
    </property>
    <property name="text">
-    <string>Output Image</string>
+    <string/>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>590</x>
-     <y>260</y>
-     <width>61</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 22pt &quot;MS Shell Dlg 2&quot;;</string>
-   </property>
-   <property name="text">
-    <string>=&gt;</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
+   <property name="placeholderText">
+    <string>Enter Upper Limit...</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>620</y>
+     <x>550</x>
+     <y>660</y>
      <width>301</width>
      <height>41</height>
     </rect>
@@ -91,33 +152,20 @@ padding-right:20px;</string>
     <string>Enter Lower Limit...</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>690</x>
-     <y>20</y>
-     <width>571</width>
-     <height>561</height>
+     <x>660</x>
+     <y>300</y>
+     <width>61</width>
+     <height>31</height>
     </rect>
    </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>571</width>
-     <height>561</height>
-    </rect>
+   <property name="styleSheet">
+    <string notr="true">font: 22pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
    <property name="text">
-    <string/>
+    <string>=&gt;</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -126,8 +174,8 @@ padding-right:20px;</string>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>730</y>
+     <x>400</x>
+     <y>740</y>
      <width>581</width>
      <height>41</height>
     </rect>
@@ -138,32 +186,21 @@ padding-right:20px;</string>
    <property name="text">
     <string/>
    </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>670</y>
-     <width>301</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border: 12px  solid rgb(0, 0, 0);
-border-width: 2px;
-font: 11.5pt &quot;MS Shell Dlg 2&quot;;
-border-radius: 15px;
-padding-left:20px;
-padding-right:20px;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
-   <property name="placeholderText">
-    <string>Enter Upper Limit...</string>
+  </widget>
+  <widget class="QPushButton" name="Open_Image_Button">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>660</y>
+     <width>401</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Open Image</string>
    </property>
   </widget>
  </widget>
