--- a/All_Project_Files/Final_Project_Files/Image_Processing_Options.ui
+++ b/All_Project_Files/Final_Project_Files/Image_Processing_Options.ui
@@ -180,8 +180,8 @@ background-color: rgb(0, 255, 0);
   <widget class="QPushButton" name="Facial_Feature_Detection_Button">
    <property name="geometry">
     <rect>
-     <x>420</x>
-     <y>680</y>
+     <x>110</x>
+     <y>660</y>
      <width>366</width>
      <height>61</height>
     </rect>
@@ -193,6 +193,24 @@ background-color: rgb(0, 255, 0);
    </property>
    <property name="text">
     <string>Facial Feature Detection</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Gaussian_Button_2">
+   <property name="geometry">
+    <rect>
+     <x>770</x>
+     <y>660</y>
+     <width>211</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;MS Shell Dlg 2&quot;;
+background-color: rgb(0, 255, 0);
+</string>
+   </property>
+   <property name="text">
+    <string>Laplace Edge</string>
    </property>
   </widget>
  </widget>
