Update UI Laytou

--- a/All_Project_Files/Final_Project_Files/Image_Processing_Options.ui
+++ b/All_Project_Files/Final_Project_Files/Image_Processing_Options.ui
@@ -195,7 +195,7 @@ background-color: rgb(0, 255, 0);
     <string>Facial Feature Detection</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="Gaussian_Button_2">
+  <widget class="QPushButton" name="Laplace_Button">
    <property name="geometry">
     <rect>
      <x>770</x>
